# openxfem

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxygen.cfg  PITCHME.md  ProjectHome.md  README.md  asymptoticfunction.h  auxiliaryfield.cpp  auxiliaryfield.h  bodyload.h  circle.cpp  circle.h  clock.h  column.cpp  compiler.def  constant.cpp  constantstiffness.cpp  constantstiffness.h  crackgrowthdirectionlaw.cpp  crackinterior.cpp  crackinterior.h  crackjunction.cpp  crackjunction.h  cracktip.cpp  cracktip.h  deadwght.cpp  deadwght.h  debug.def  delaunay.cpp  delaunay.h  diagmtrx.h  dof.cpp  domain.cpp  domain.h  elasticmaterial.cpp  elasticmaterial.h  element.cpp  element.h  (+87 more)
defs/: compiler.DEF  debug.DEF
doc/: Doxyfile
inc/: 3disoelement.h  abssigneddistance.h  ansplate.h  asymptoticfunction.h  auxiliaryfield.h  bendingcrackasymp.h  bimatcrackasymp.h  bodyload.h  boundary.h  circle.h  column.h  constant.h  constantstiffness.h  crackasymptotic.h  crackgrowthdirectionlaw.h  crackgrowthincrementlaw.h  crackinterior.h  crackjunction.h  cracktip.h  deadwght.h  delaunay.h  diagmtrx.h  dictionr.h  discontinuousfunction.h  dof.h  domain.h  elasticmaterial.h  element.h  enrichmentdetector.h  enrichmentfunction.h  enrichmentitem.h  fei2dquadlin.h  fei2dtrilin.h  fei2dtriquad.h  fei3dlineartetra.h  feinterpol.h  feinterpol2d.h  feinterpol3d.h  femcmpnn.h  fixedincrement.h  (+65 more)
public/: 3disoelement_8cpp_source.html  _form0.eps  _form0.ps  _formulas.dvi  _formulas.tex  abssigneddistance_8cpp_source.html  annotated.html  annotated_dup.js  ansplate_8h_source.html  (+346 more)
(+607 files in other folders)
